@@ -1,3 +1,10 @@
+2008-02-11  Mickael Remond  <mremond@process-one.net>
+
+	* src/core/exmpp_xml.erl: Improved API: We can now register a user
+	even if we have not set the authentication parameters
+	* src/client/exmpp_client_register.erl: Encode entities
+	* src/examples/echo_client.erl: Minor typo in comment
+
 2008-02-10  Mickael Remond  <mremond@process-one.net>
 
 	* src/core/exmpp_error.erl: Improved exceptions
